# anki-plugin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: verify.yml
scripts/: check_sources.py  smoke_test_anki_runtime.py
src/anki_lookup/: bootstrap.py  hooks.py  manifest.json  metadata.py  protocol.py  runtime.py
src/anki_lookup/dictionary/: __init__.py  content.py  importer.py  models.py  normalization.py  repository.py  schema.py  service.py
src/anki_lookup/language/: __init__.py  base.py  generic.py  japanese.py  registry.py  transformer.py
src/anki_lookup/ui/: __init__.py  dictionary_manager.py
src/anki_lookup/web/: popup.css  popup.js
tests/: dictionary_helpers.py  test_dictionary_content.py  test_dictionary_importer.py  test_dictionary_repository.py  test_dictionary_schema.py  test_dictionary_service.py  test_language_profiles.py  test_protocol.py
